--- a/index.html
+++ b/index.html
@@ -653,6 +653,8 @@
           <div class="card-icon">
             <i class="fas fa-handshake"></i>
           </div>
+
+          <a href="https://cibrasilcidade.com.br/">
           <h3>CI BRASIL</h3>
           <p align="center" style="margin-top: 20px;">
             <a href="https://cibrasilcidade.com.br/" target="_blank" style="display: inline-block; padding: 10px 20px; background: rgba(0, 240, 255, 0.1); border-radius: 10px; border: 1px solid rgba(0, 240, 255, 0.3); transition: all 0.3s ease;">
@@ -660,6 +662,7 @@
             </a>
           </p>
         </div>
+        </a>
 
         <div class="card fade-in">
           <div class="card-icon">
@@ -799,3 +802,4 @@
 
 </body>
 </html>
+
